logoutput/manifests/logoutput-service.yml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
  - name: timestamp
    port: 6666
    protocol: TCP
    targetPort: 8888
