logoutput/manifests/pong-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
  - name: pong
    port: 1234
    protocol: TCP
    targetPort: 3002
